[gd_scene load_steps=7 format=3 uid="uid://cbf5d1fnt08pi"]

[ext_resource type="Script" path="res://scene_not_main/pause_menu.gd" id="1_xblxu"]
[ext_resource type="StyleBox" uid="uid://esy5gfotjiq4" path="res://Main Scenes/menu/menu_button_normal.tres" id="2_jx3mf"]
[ext_resource type="StyleBox" uid="uid://bkvenev8asqbw" path="res://Main Scenes/menu/menu_button_hover.tres" id="3_58exe"]

[sub_resource type="SystemFont" id="SystemFont_8b4rr"]
font_names = PackedStringArray("Arial Rounded MT")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_a82qr"]
font_names = PackedStringArray("Arial Rounded MT")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_1pb1j"]
font_names = PackedStringArray("Arial Rounded MT")
subpixel_positioning = 0

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xblxu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -50.5
offset_right = 37.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_8b4rr")
theme_override_styles/focus = ExtResource("2_jx3mf")
theme_override_styles/hover_pressed = ExtResource("3_58exe")
theme_override_styles/hover = ExtResource("3_58exe")
theme_override_styles/pressed = ExtResource("2_jx3mf")
theme_override_styles/normal = ExtResource("2_jx3mf")
text = "RESUME"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_a82qr")
theme_override_styles/focus = ExtResource("2_jx3mf")
theme_override_styles/hover_pressed = ExtResource("3_58exe")
theme_override_styles/hover = ExtResource("3_58exe")
theme_override_styles/pressed = ExtResource("2_jx3mf")
theme_override_styles/normal = ExtResource("2_jx3mf")
text = "RESTART"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_1pb1j")
theme_override_styles/focus = ExtResource("2_jx3mf")
theme_override_styles/hover_pressed = ExtResource("3_58exe")
theme_override_styles/hover = ExtResource("3_58exe")
theme_override_styles/pressed = ExtResource("2_jx3mf")
theme_override_styles/normal = ExtResource("2_jx3mf")
text = "QUIT"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
